2004-09-26  Ulrich Weigand  <uweigand@de.ibm.com>

	* builtins.c (expand_builtin_memcmp): Adjust MEM_SIZE to
	reflect size of memory regions being compared.

2004-09-26  Ulrich Weigand  <uweigand@de.ibm.com>

	* builtins.c (get_memory_rtx): Set mem attributes for non-ADDR_EXPR
	expressions.  Always clear MEM_SIZE and alias set.

2004-09-26  Roger Sayle  <roger@eyesopen.com>
	    Giovanni Bajo  <giovannibajo@gcc.gnu.org>

	PR middle-end/17112
	* stor-layout.c (compute_record_mode): For records with a single
	field, only use the field's mode if its size matches what we'd
	have choosen for the record ourselves.  This forces the use of
	BLKmode for packed records that don't completely fill a mode.

2004-09-26  Roger Sayle  <roger@eyesopen.com>

	PR middle-end/17151
	* combine.c (force_to_mode): Remove dubious early return test that
	inhibits further optimization.

2004-09-26  Kazu Hirata  <kazu@cs.umass.edu>

	* profile.c: Fix a comment typo.

2004-09-26  Zdenek Dvorak  <rakdver@atrey.karlin.mff.cuni.cz>

	PR bootstrap/17591
	* tree-ssa-loop-im.c (for_each_index): Call callback for component_refs
	with varying offset.
	* tree-ssa-loop-ivopts.c (abnormal_ssa_name_p): New function.
	(idx_contains_abnormal_ssa_name_p): Scan step and lower bound for
	ARRAY_REFS.
	(expr_invariant_in_loop_p): New function.
	(idx_find_step): Handle step and lower bound for ARRAY_REFs.  Handle
	component_ref_field_offset for COMPONENT_REFs.  Do not allow
	ALIGN_INDIRECT_REFs and MISALIGNED_INDIRECT_REFs.
	(add_address_candidates): Do not handle ALIGN_INDIRECT_REFs and
	MISALIGNED_INDIRECT_REFs.
	(idx_remove_ssa_names): Handle step and lower bound for ARRAY_REFs.
	(rewrite_address_base): Do not handle ALIGN_INDIRECT_REFs and
	MISALIGNED_INDIRECT_REFs.

2004-09-26  Joseph S. Myers  <jsm@polyomino.org.uk>

	PR c/11459
	* gcc.c (cpp_options, cc1_options): Preserve relative order of
	-std and -ansi options.

2004-09-26  Jan Hubicka  <jh@suse.cz>
